Build Beta 3.5 January 29 2011
* Fix line wrapping for Reverse Code
* Fix wrapped URL's losing underline
* Fix hover issue with nicknames with an underscore in them



Build Beta 3.4 January 24 2011
* Added fix for removing channel mode l
* Added button to remove channel exceptions
* Added CTRL-R for reverse text code
* Added CTRL-O for plain text code
* Added CTRL-I for italic text code
* Added parsing for reverse characters
* Added parsing for italic characters
* Added parsing for bold characters



Build Beta 3.3 January 9 2011
* Added a Splash Screen
* www1 links now work as well, with numbers after www
* Toolbar shows Update Button when an IceChat Update is available
* # is now parsed in Channel and Nicklist Popups as the current channel
* Fixed bug with removing a channel key, now just a matter of unchecking the check box
* Added /aaway command to set /away for all connected servers


Build Beta 3.2 January 2 2011
* /play command now allows for a full path to be sent to it
* Fixed issues with *nix and aliases and popup files not properly being parsed


Build Beta 3.1 January 2 2011
* Added /reload command. Command accepts alias,popup,emoticon,sound to reload those config files on the fly
* Opening editor also reloads aliases and popup files from actual file


Build Beta 3 January 1 2011
* Added /play command to play WAV files in the Sounds folder
* Added /amsg command to send messages to all open channels for a server
* Added /joinserv command which can connect to a server and a channel /joinserv irc.server.com #channel
* Links that start with www now show as links
* Fixed bug with emoticons on lines that are wrapped
* The Updater should work properly now, closing IceChat and updating the files properly


Build Beta 2.2 - December 9 2010
* Fixed problem with trying to add submenu items to a seperator for the Popup Menus
* Added option to Display Settings to set the Opacity of the Main Window